[package]
name = "validators"
version = "0.1.0"
description = "Common validators that can be used across projects"
author = ["Marirs <marirs@gmail.com>"]
categories = []
keywords = ["validate", "valid", "crypto", "creditcards", "email", "domain"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/marirs/validators-rs"
homepage = "https://github.com/marirs/validators-rs"
edition = "2018"

[dependencies]
idna = "0.2"
regex = "1"
lazy_static = { version = "1", optional = true }

[badges]
travis-ci = { repository = "marirs/validators-rs" }

[lib]
name = "validators"
path = "src/lib.rs"

[features]
crypto = ["lazy_static"]
validators-all = ["crypto"]

[[example]]
name = "crypto"
path = "examples/crypto.rs"
required-features = ["crypto"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
