[package]
name = "validaten"
version = "0.1.0"
description = "Common validators for cryptocurrency, creditcards, domain, url, etc that can be used across projects"
author = ["Marirs <marirs@gmail.com>"]
categories = []
keywords = ["validate", "validators", "crypto", "creditcards", "email", "domain"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/marirs/validaten-rs"
homepage = "https://github.com/marirs/validaten-rs"
edition = "2018"

[dependencies]
idna = "0.2"
regex = "1"
lazy_static = { version = "1", optional = true }

[badges]
travis-ci = { repository = "marirs/validators-rs" }

[lib]
name = "validaten"
path = "src/lib.rs"

[features]
crypto = ["lazy_static"]
validaten-all = ["crypto"]

[[example]]
name = "crypto"
path = "examples/crypto.rs"
required-features = ["crypto"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
