[package]
name = "validaten"
version = "0.1.0"
description = "Common validators for cryptocurrency, creditcards, domain, url, etc that can be used across projects"
author = ["Marirs <marirs@gmail.com>"]
categories = ["rust-patterns"]
keywords = ["validate", "validators", "crypto", "creditcards", "email", "domain"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/marirs/validaten-rs"
homepage = "https://github.com/marirs/validaten-rs"
edition = "2018"

[dependencies]
checkluhn = { version = "0.0.1", optional = true }
idna = { version = "0.2", optional = true }
regex = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }

[badges]
travis-ci = { repository = "marirs/validators-rs" }

[lib]
name = "validaten"
path = "src/lib.rs"

[features]
crypto = ["lazy_static", "regex"]
hashes = ["lazy_static", "regex"]
creditcard = ["lazy_static", "checkluhn", "regex"]
networks = ["regex"]
internet = ["idna", "lazy_static", "regex"]
validaten-all = ["crypto", "hashes", "creditcard", "networks", "internet"]

[[example]]
name = "crypto"
path = "examples/crypto.rs"
required-features = ["crypto"]

[[example]]
name = "hash"
path = "examples/hash.rs"
required-features = ["hashes"]

[[example]]
name = "credit-card"
path = "examples/credit-card.rs"
required-features = ["creditcard"]

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug-assertions = false
debug = false
opt-level = 3
lto = true
